--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="enter_your_text">Enter your text</string>
     <string name="clear">Clear</string>
     <string name="translate">Translate</string>
+    <string name="choose_language">Choose language</string>
 </resources>
